--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=first
-spring.datasource.url=jdbc:mysql://localhost:3306/guardiao_db
+spring.datasource.url=jdbc:mysql://localhost:3306/project_test
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
