--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/project_test
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+spring.threads.virtual.enabled=true
+jwt.private.key=classpath:app.key 
+jwt.public.key=classpath:app.pub 
